--- a/python/tests/unit_test_data/json-fixer.ipynb
+++ b/python/tests/unit_test_data/json-fixer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "            tsdf = {}\n",
     "            update_dict(tsdf, \"ts_col\", before[i][j][k].get(\"ts_col\", None))\n",
     "            update_dict(tsdf, \"other_ts_cols\", before[i][j][k].get(\"other_ts_cols\", None))\n",
-    "            update_dict(tsdf, \"partition_cols\", before[i][j][k].get(\"partition_col\", None))\n",
+    "            update_dict(tsdf, \"partition_cols\", before[i][j][k].get(\"partition_cols\", None))\n",
     "            update_dict(tsdf,  \"sequence_col\", before[i][j][k].get(\"sequence_col\", None))\n",
     "            update_dict(tsdf, \"start_ts\", before[i][j][k].get(\"start_ts\", None))\n",
     "            update_dict(tsdf, \"end_ts\", before[i][j][k].get(\"end_ts\", None))\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "        tsdf = {}\n",
     "        update_dict(tsdf, \"ts_col\", before[i][j].get(\"ts_col\", None))\n",
     "        update_dict(tsdf, \"other_ts_cols\", before[i][j].get(\"other_ts_cols\", None))\n",
-    "        update_dict(tsdf, \"partition_cols\", before[i][j].get(\"partition_col\", None))\n",
+    "        update_dict(tsdf, \"partition_cols\", before[i][j].get(\"partition_cols\", None))\n",
     "        update_dict(tsdf,  \"sequence_col\", before[i][j].get(\"sequence_col\", None))\n",
     "        update_dict(tsdf, \"start_ts\", before[i][j].get(\"start_ts\", None))\n",
     "        update_dict(tsdf, \"end_ts\", before[i][j].get(\"end_ts\", None))\n",
@@ -83,19 +83,19 @@
     "        after_2[i][j] = {\n",
     "                    \"tsdf\": tsdf,\n",
     "                    \"df\": sdf,\n",
-    "                    \"$ref\": before[i][j].get(\"$ref\", None)\n",
     "                }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'__SharedData': {'input_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "{'__SharedData': {'input_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "    'partition_cols': ['symbol']},\n",
        "   'df': {'schema': 'symbol string, date string, event_ts string, trade_pr float, trade_pr_2 float',\n",
        "    'data': [['S1', 'SAME_DT', '2020-08-01 00:00:10', 349.21, 10.0],\n",
        "     ['S1', 'SAME_DT', '2020-08-01 00:00:11', 340.21, 9.0],\n",
@@ -103,11 +103,10 @@
        "     ['S1', 'SAME_DT', '2020-08-01 00:01:13', 351.32, 7.0],\n",
        "     ['S1', 'SAME_DT', '2020-08-01 00:01:14', 350.32, 6.0],\n",
        "     ['S1', 'SAME_DT', '2020-09-01 00:01:12', 361.1, 5.0],\n",
-       "     ['S1', 'SAME_DT', '2020-09-01 00:19:12', 362.1, 4.0]]},\n",
-       "   '$ref': None}}}"
+       "     ['S1', 'SAME_DT', '2020-09-01 00:19:12', 362.1, 4.0]]}}}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +135,8 @@
        "  'test_aggregate_floor': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 'SAME_DT', 349.21, 10.0],\n",
        "      ['S1', '2020-09-01 00:00:00', 'SAME_DT', 361.1, 5.0]]},\n",
@@ -144,7 +144,8 @@
        "  'test_aggregate_average': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, trade_pr double, trade_pr_2 double',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 348.8760009765625, 8.0],\n",
        "      ['S1', '2020-09-01 00:00:00', 361.6000061035156, 4.5]]},\n",
@@ -152,7 +153,8 @@
        "  'test_aggregate_min': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 'SAME_DT', 340.21, 6.0],\n",
        "      ['S1', '2020-09-01 00:00:00', 'SAME_DT', 361.1, 4.0]]},\n",
@@ -160,14 +162,16 @@
        "  'test_aggregate_min_with_prefix': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, min_date string, min_trade_pr float, min_trade_pr_2 float',\n",
        "     'data': {'$ref': '#/ResampleUnitTests/test_aggregate_min/expected_data/data'}},\n",
        "    '$ref': None}},\n",
        "  'test_aggregate_min_with_fill': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 'SAME_DT', 340.21, 6.0],\n",
        "      ['S1', '2020-08-02 00:00:00', None, 0.0, 0.0],\n",
@@ -205,7 +209,8 @@
        "  'test_aggregate_max': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 'SAME_DT', 353.32, 10.0],\n",
        "      ['S1', '2020-09-01 00:00:00', 'SAME_DT', 362.1, 5.0]]},\n",
@@ -213,7 +218,8 @@
        "  'test_aggregate_ceiling': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-08-01 00:00:00', 'SAME_DT', 350.32, 6.0],\n",
        "      ['S1', '2020-09-01 00:00:00', 'SAME_DT', 362.1, 4.0]]},\n",
@@ -221,12 +227,14 @@
        "  'test_aggregate_invalid_func_arg': {'input_data': {'tsdf': {},\n",
        "    'df': {},\n",
        "    '$ref': '#/__SharedData/input_data'},\n",
-       "   'expected_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       "   'expected_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "     'partition_cols': ['symbol']},\n",
        "    'df': {'schema': 'symbol string, event_ts string, date string, trade_pr float, trade_pr_2 float',\n",
        "     'data': [['S1', '2020-07-31 20:00:00', 'SAME_DT', 348.88, 8.0],\n",
        "      ['S1', '2020-08-31 20:00:00', 'SAME_DT', 361.6, 4.5]]},\n",
        "    '$ref': None}}},\n",
-       " '__SharedData': {'input_data': {'tsdf': {'ts_col': 'event_ts'},\n",
+       " '__SharedData': {'input_data': {'tsdf': {'ts_col': 'event_ts',\n",
+       "    'partition_cols': ['symbol']},\n",
        "   'df': {'schema': 'symbol string, date string, event_ts string, trade_pr float, trade_pr_2 float',\n",
        "    'data': [['S1', 'SAME_DT', '2020-08-01 00:00:10', 349.21, 10.0],\n",
        "     ['S1', 'SAME_DT', '2020-08-01 00:00:11', 340.21, 9.0],\n",
@@ -234,11 +242,10 @@
        "     ['S1', 'SAME_DT', '2020-08-01 00:01:13', 351.32, 7.0],\n",
        "     ['S1', 'SAME_DT', '2020-08-01 00:01:14', 350.32, 6.0],\n",
        "     ['S1', 'SAME_DT', '2020-09-01 00:01:12', 361.1, 5.0],\n",
-       "     ['S1', 'SAME_DT', '2020-09-01 00:19:12', 362.1, 4.0]]},\n",
-       "   '$ref': None}}}"
+       "     ['S1', 'SAME_DT', '2020-09-01 00:19:12', 362.1, 4.0]]}}}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
